# project-machine-learning

./: .env.example  .gitignore  Contributing.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
frontend/: app.js  index.html
frontend/css/: style.css
models/: cv_results_model01.csv  cv_results_model02.csv  cv_results_nb.csv  model01_summary.csv  model02_summary.csv
notebooks/: main.ipynb
src/: config.py
src/api/: main.py  middleware.py  routes.py  schemas.py
src/data/: dataset.py  generator.py  preprocess.py
src/features/: extraction.py  selection.py
src/models/model01/: dataloader.py  model01.py  predict.py  train.py
src/models/model02/: dataloader.py  model02.py  predict.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_features.py  test_models.py
