[project]
name = "project-machine-learning"
version = "0.1.0"
description = "Clasificador de intención NLP para agente geoespacial multiagente"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    # ── Data & ML core ──────────────────────────────
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "scipy>=1.13",

    # ── NLP ─────────────────────────────────────────
    "nltk>=3.8",
    "spacy>=3.7",

    # ── Embeddings ───────────────────────────────────
    #"sentence-transformers>=3.0",

    # ── Generación de datos (GROQ) ───────────────────
    "groq>=0.9",
    "python-dotenv>=1.0",

    # ── API ─────────────────────────────────────────
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",

    # ── Visualización ────────────────────────────────
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",

    # ── Notebooks ────────────────────────────────────
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
generate-data = "src.data.generator:main"
train-model01 = "src.models.model01.train:main"
train-model02 = "src.models.model02.train:main"
serve-api     = "src.api.main:serve"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]